Install primeflex, update login page styles
Style login page, todo: move buttons to container component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<div class="p-d-flex p-jc-center p-ai-center wrapper">
+    <div class="header">
+        <div class="btn-box p-d-flex">
+            <a href="#" class="toggle-btn clicked">Login</a>
+            <a href="#" class="toggle-btn">Register</a>
+        </div>
+    </div>
+</div>
