--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,22 @@
 <div class="p-d-flex p-jc-center p-ai-center wrapper">
     <div class="header">
-        <div class="btn-box p-d-flex">
-            <a href="#" class="toggle-btn clicked">Login</a>
-            <a href="#" class="toggle-btn">Register</a>
-        </div>
-    </div>
+        <h2>Login</h2>
+        <form [formGroup]="loginForm">
+            <div class="form-group p-d-flex p-flex-column">
+                <label for="username">Username</label>
+                <input type="text" formControlName="username" class="form-control">
+            </div>
+    
+            <div class="form-group p-d-flex p-flex-column">
+                <label for="password">Password</label>
+                <input type="password" formControlName="password" class="form-control">
+            </div>
+    
+            <div class="form-group p-d-flex p-flex-column">       
+                <button [disabled]="loading" pButton type="button" label="Login">
+                    <i *ngIf="loading" class="pi pi-spin pi-spinner"></i>
+                </button>
+                <a href="register" class="register-link">Don't have an account? <strong>Create one!</strong></a>                 
+            </div>
+        </form>
 </div>
