--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,5 @@ html {
     margin: 0;
     font-family: Montserrat, sans-serif;
     font-size: 1em;
-    background: linear-gradient(to right, #29ffc6, #20e3b2,#0cebeb);
+    background: linear-gradient(45deg, #B1E0B0, #ACB4E7);
 }
