--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,17 +2,21 @@
     <div class="header">
         <h2>Login</h2>
         <form [formGroup]="loginForm">
-            <div class="form-group p-d-flex p-flex-column">
-                <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control">
+            <div class="input-group p-d-flex p-jc-center p-ai-center">
+                <div class="p-field p-d-flex p-flex-column">
+                    <label for="username">Username</label>
+                    <input id="username" type="text" pInputText> 
+                </div>
             </div>
-    
-            <div class="form-group p-d-flex p-flex-column">
-                <label for="password">Password</label>
-                <input type="password" formControlName="password" class="form-control">
+
+            <div class="input-group p-d-flex p-jc-center p-ai-center">
+                <div class="p-field p-d-flex p-flex-column">
+                    <label for="password">Password</label>
+                    <input id="password" type="password" promptLabel="Password strength" pPassword />
+                </div>
             </div>
-    
-            <div class="form-group p-d-flex p-flex-column">       
+            
+            <div class="btn p-d-flex p-flex-column p-jc-center p-ai-center">       
                 <button [disabled]="loading" pButton type="button" label="Login">
                     <i *ngIf="loading" class="pi pi-spin pi-spinner"></i>
                 </button>
