--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -4,10 +4,11 @@
 }
 
 .header {
-    height: 40vh;
+    height: auto;
     width: 50vh;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 2px 0px rgba(0,0,0,.12);
     background-color: white;
+    overflow: auto;
 }
 
 h2 {
@@ -42,13 +43,17 @@ h2 {
     width: 100%;
 }
 
-.register-link {
-    margin-top: 20px;
+.link {
+    margin: 1rem 0;
     text-decoration: none;
     text-align: center;
 }
 
-.register-link:hover {
+.link:hover {
     color: #144b79;
     text-decoration: underline;
+}
+
+.forgot {
+    margin-top: 0;
 }
