Update button label, add page redirection

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -48,9 +48,10 @@
             </div>
 
             <div class="btn p-d-flex p-flex-column p-jc-center p-ai-center">       
-                <button [disabled]="loading" pButton label="Login">
+                <button [disabled]="loading" pButton label="Create account">
                     <i *ngIf="loading" class="pi pi-spin pi-spinner"></i>
                 </button>         
+                <a href="login" class="link">Or <strong>Log in!</strong></a> 
             </div>
         </form>
 </div>
