--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -37,9 +37,19 @@ h2 {
 
 .btn {
     margin: 0 1.5rem;
-    margin-bottom: 1.5rem;
 }
 
 .btn button {
     width: 100%;
+}
+
+.link {
+    margin: 1rem 0;
+    text-decoration: none;
+    text-align: center;
+}
+
+.link:hover {
+    color: #144b79;
+    text-decoration: underline;
 }
